[project]
name = "citation-cartel-dataset"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "propcache==0.5.2",
    "tenacity==9.1.4",
    "tqdm==4.68.4",
    "typing-extensions==4.16.0",
    "yarl==1.24.2",
]
