[project]
name = "cvs-cartel-detection"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.3.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-louvain==0.16",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]
